# transformer-ansys

./: .gitignore  pyproject.toml
FomulaBEAT/: analysis_06-1.ipynb  analysis_06-2.ipynb  analysis_06-3-1.ipynb  analysis_06-3.ipynb  create_fomura1.ipynb  create_fomura2.ipynb  tf_math01.ipynb  tf_math02-1.ipynb  tf_math02-2.ipynb  tf_math02-3.ipynb  tf_math02.ipynb  tf_math03-1.ipynb  tf_math03-2.ipynb  tf_math03.ipynb  tf_math04-1-3.ipynb  tf_math04-1-4.ipynb  tf_math04-1-5.ipynb  tf_math04-2-1.ipynb  tf_math04-2-2.ipynb  tf_math04-2-3.ipynb  tf_math05-1-1.ipynb  tf_math05-1.ipynb  tf_math05-3.ipynb  tf_math06-1.ipynb  tf_math06-3.ipynb  visualize.ipynb
LowDimMath/: create_fomura1.ipynb
