[tool.poetry]
name = "transformeransys"
version = "0.1.0"
description = ""
authors = ["AriRyo <come11926323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pathlib = "^1.0.1"
numpy = "^2.1.0"
torch = {version = "^2.4.0+cu121", source = "torch_cu121"}
torchvision = {version = "^0.19.0+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.4.0+cu121", source = "torch_cu121"}
fastapi = "^0.112.1"
uvicorn = "^0.30.6"
ffmpeg-python = "^0.2.0"
ffmpeg = "^1.4"
pandas = "^2.2.2"
notebook = "^7.2.1"
jupyterlab = "^4.2.4"
matplotlib = "^3.9.2"
ipywidgets = "^8.1.3"
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
mypy = "^1.11.1"
openpyxl = "^3.1.5"
transformers = {extras = ["torch"], version = "^4.44.2"}
accelerate = "^0.34.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


